fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -15,11 +15,12 @@ body{
     display:grid;
     grid-template-columns: repeat(4, 1fr);
     background-color: bisque;
+    overflow:hidden;
 }
 
 .bannerLink{
     text-decoration: none;
-    background-color: aqua;
+    background-color: gray;
     text-align: center;
     writing-mode: vertical-rl;
     font-size: 50px;
